--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "framer-motion": "^11.7.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
